RFECV-Acc:0.580 +/- 0.007 (SVC,features=1000,normalization)

--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "Name: MGMT, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(256, 1042)"
+       "(256, 1103)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
    "source": [
     "### Reducing features using Variance Threshold\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
-    "vt=VarianceThreshold(threshold=0.3)\n",
+    "vt=VarianceThreshold(threshold=0.1)\n",
     "vt.fit(df_t1_t2.drop(['MGMT','SubjectID'],axis=1))\n",
     "df_t1_t2_vt=vt.transform(df_t1_t2.drop(['MGMT','SubjectID'],axis=1))\n",
     "df_t1_t2_vt.shape"
@@ -150,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train size - (204, 1042)\n",
-      "test size - (52, 1042)\n"
+      "train size - (204, 1103)\n",
+      "test size - (52, 1103)\n"
      ]
     }
    ],
@@ -177,32 +177,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature selection using SVM"
+    "#### Feature selection TEchniques"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function for rfe \n",
-    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.feature_selection import RFE,RFECV\n",
     "def rfe_feature_selection(algo,X,y):\n",
-    "  rfe=RFE(estimator=algo).fit(X,y)\n",
+    "  rfe=RFECV(estimator=algo,cv=10,min_features_to_select=1000)\n",
+    "  rfe.fit(X,y)\n",
     "  rfe_sel_index=rfe.get_support(indices=True)\n",
     "  return rfe_sel_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
+    "# Function for Random Forest Classifier\n",
     "def rf(x,y):\n",
     "   select_feat = SelectFromModel(estimator= RandomForestClassifier()).fit(x,y)\n",
     "   feat_idx = select_feat.get_support(indices=True)\n",
@@ -214,17 +215,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scaling features"
+    "#### Features Scaling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "x_scaled = StandardScaler().fit(train_x)\n",
+    "from sklearn.preprocessing import StandardScaler,MinMaxScaler,Normalizer\n",
+    "x_scaled = Normalizer().fit(train_x)\n",
     "train_x_scaled = x_scaled.transform(train_x)\n",
     "test_x_scaled=x_scaled.transform(test_x)"
    ]
@@ -242,69 +243,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cross validating the training data for getting indexes of the features"
+    "Calling RFECV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000,)"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "lr=LogisticRegression()\n",
+    "knn=KNeighborsClassifier(n_neighbors=7)\n",
+    "svc=SVC(kernel='linear',C=0.7)\n",
+    "rfecv_feat_idx=rfe_feature_selection(svc,train_x_scaled,train_y) # Getting features using RFECV \n",
+    "rfecv_feat_idx.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.svm import SVC\n",
-    "k_folds=10\n",
-    "cv_sel_idx_list=[]\n",
-    "skfold=StratifiedKFold(n_splits=k_folds,random_state=42,shuffle=True)\n",
-    "for train_idx,val_idx in skfold.split(train_x_scaled,train_y):\n",
-    "    x_train = np.take(train_x_scaled,train_idx,axis=0) # This train is the train set in validation\n",
-    "    x_val = np.take(train_x_scaled,val_idx,axis=0)\n",
-    "    y_train = np.take(train_y,train_idx,axis=0)\n",
-    "    y_val = np.take(train_y,val_idx,axis=0)\n",
-    "    # cv_sel_idx=rfe_feature_selection(SVC(kernel='linear'),x_train,y_train)\n",
-    "    cv_sel_idx=rf(x_train,y_train)\n",
-    "    cv_sel_idx_list.append(cv_sel_idx)\n",
+    "# from sklearn.model_selection import StratifiedKFold\n",
+    "# from sklearn.svm import SVC\n",
+    "# k_folds=10\n",
+    "# cv_sel_idx_list=[]\n",
+    "# skfold=StratifiedKFold(n_splits=k_folds,random_state=42,shuffle=True)\n",
+    "# for train_idx,val_idx in skfold.split(train_x_scaled,train_y):\n",
+    "#     x_train = np.take(train_x_scaled,train_idx,axis=0) # This train is the train set in validation\n",
+    "#     x_val = np.take(train_x_scaled,val_idx,axis=0)\n",
+    "#     y_train = np.take(train_y,train_idx,axis=0)\n",
+    "#     y_val = np.take(train_y,val_idx,axis=0)\n",
+    "#     # cv_sel_idx=rfe_feature_selection(SVC(kernel='linear'),x_train,y_train)\n",
+    "#     cv_sel_idx=rf(x_train,y_train)\n",
+    "#     cv_sel_idx_list.append(cv_sel_idx)\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 232,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(968,)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "### Concatinating the selected indexes from cv_sel_idx_list\n",
-    "concat_sel_idx=cv_sel_idx_list[0]\n",
-    "for i in list(range(1,10)):\n",
-    "    concat_sel_idx=np.concatenate((concat_sel_idx,cv_sel_idx_list[i]))\n",
+    "# ### Concatinating the selected indexes from cv_sel_idx_list\n",
+    "# concat_sel_idx=cv_sel_idx_list[0]\n",
+    "# for i in list(range(1,10)):\n",
+    "#     concat_sel_idx=np.concatenate((concat_sel_idx,cv_sel_idx_list[i]))\n",
     "    \n",
-    "concat_sel_idx=np.unique(concat_sel_idx)\n",
-    "concat_sel_idx.shape"
+    "# concat_sel_idx=np.unique(concat_sel_idx)\n",
+    "# concat_sel_idx.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "k_folds=10\n",
     "skfold=StratifiedKFold(n_splits=k_folds,random_state=42,shuffle=True)\n",
-    "sel_train_x=np.take(train_x_scaled,concat_sel_idx,axis=1)\n",
-    "sel_test_x=np.take(test_x_scaled,concat_sel_idx,axis=1)\n",
+    "sel_train_x=np.take(train_x_scaled,rfecv_feat_idx,axis=1)\n",
+    "sel_test_x=np.take(test_x_scaled,rfecv_feat_idx,axis=1)\n",
     "metrics=[]\n",
     "for train_idx,val_idx in skfold.split(sel_train_x,train_y):\n",
     "    x_train = np.take(sel_train_x,train_idx,axis=0) # This train is the train set in validation\n",
@@ -323,25 +341,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.5714285714285714, 0.5576923076923077],\n",
-       " [0.6190476190476191, 0.5384615384615384],\n",
+       "[[0.5238095238095238, 0.5769230769230769],\n",
        " [0.5714285714285714, 0.5769230769230769],\n",
+       " [0.5714285714285714, 0.5961538461538461],\n",
        " [0.5714285714285714, 0.5769230769230769],\n",
+       " [0.6, 0.5961538461538461],\n",
+       " [0.6, 0.5769230769230769],\n",
        " [0.6, 0.5769230769230769],\n",
        " [0.55, 0.5769230769230769],\n",
-       " [0.6, 0.5769230769230769],\n",
        " [0.55, 0.5769230769230769],\n",
-       " [0.6, 0.5769230769230769],\n",
        " [0.55, 0.5769230769230769]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.571153846153846 +/- 0.01231370045660162\n"
+      "Accuracy : 0.5807692307692307 +/- 0.0076923076923077075\n"
      ]
     }
    ],
@@ -380,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,15 +479,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-19-c772e36d472f>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-239-c772e36d472f>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-19-c772e36d472f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    from sklearn.\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-239-c772e36d472f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    from sklearn.\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
