RFECV-Acc:0.574 +/- 0.0057 (SVC,features=1000,standardisation)

--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "Name: MGMT, dtype: int64"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "(256, 1103)"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler,MinMaxScaler,Normalizer\n",
-    "x_scaled = Normalizer().fit(train_x)\n",
+    "from sklearn.preprocessing import StandardScaler,MinMaxScaler\n",
+    "x_scaled = StandardScaler().fit(train_x)\n",
     "train_x_scaled = x_scaled.transform(train_x)\n",
     "test_x_scaled=x_scaled.transform(test_x)"
    ]
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "(1000,)"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,25 +341,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.5238095238095238, 0.5769230769230769],\n",
+       "[[0.5714285714285714, 0.5769230769230769],\n",
+       " [0.6190476190476191, 0.5576923076923077],\n",
        " [0.5714285714285714, 0.5769230769230769],\n",
-       " [0.5714285714285714, 0.5961538461538461],\n",
        " [0.5714285714285714, 0.5769230769230769],\n",
-       " [0.6, 0.5961538461538461],\n",
-       " [0.6, 0.5769230769230769],\n",
        " [0.6, 0.5769230769230769],\n",
        " [0.55, 0.5769230769230769],\n",
+       " [0.6, 0.5769230769230769],\n",
        " [0.55, 0.5769230769230769],\n",
+       " [0.6, 0.5769230769230769],\n",
        " [0.55, 0.5769230769230769]]"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.5807692307692307 +/- 0.0076923076923077075\n"
+      "Accuracy : 0.5749999999999998 +/- 0.0057692307692307505\n"
      ]
     }
    ],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,15 +479,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-239-c772e36d472f>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-259-c772e36d472f>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-239-c772e36d472f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    from sklearn.\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-259-c772e36d472f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    from sklearn.\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
