Acc:  0.634 +/- 0.019 (Used Boruta and rfecv)

--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "Name: MGMT, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "(256, 1730)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "(204, 315)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function for rfe \n",
     "from sklearn.feature_selection import RFE,RFECV\n",
-    "def rfe_feature_selection(algo,X,y):\n",
-    "  rfe=RFECV(estimator=algo,cv=15)\n",
+    "def rfe_feature_selection(algo,X,y,cv):\n",
+    "  rfe=RFECV(estimator=algo,cv=cv)\n",
     "  rfe.fit(X,y)\n",
     "  rfe_sel_index=rfe.get_support(indices=True)\n",
     "  return rfe_sel_index"
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,8 +313,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selected features usinfg Boruta = 50"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +361,7 @@
        "0.6346153846153846"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +434,7 @@
        "0.6153846153846154"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,8 +463,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selected features form RFECV = 25 by using cv=15"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +481,7 @@
        "(25,)"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,33 +493,29 @@
     "lr=LogisticRegression()\n",
     "knn=KNeighborsClassifier(n_neighbors=7)\n",
     "svc=SVC(kernel='linear',C=0.7)\n",
-    "rfecv_feat_idx=rfe_feature_selection(svc,boruta_train_x_scaled,train_y) # Getting features using RFECV \n",
+    "rfecv_feat_idx=rfe_feature_selection(svc,boruta_train_x_scaled,train_y,15) # Getting features using RFECV \n",
     "rfecv_feat_idx.shape"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 162,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(204, 50)"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "boruta_train_x_scaled.shape"
+    "selected features = 25"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Used cv = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +562,7 @@
        " [0.55, 0.6538461538461539]]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
