mgmt and survival

--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "Name: MGMT, dtype: int64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "(256, 1730)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "(204, 315)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function for rfe \n",
     "from sklearn.feature_selection import RFE,RFECV\n",
     "def rfe_feature_selection(algo,X,y,cv):\n",
-    "  rfe=RFECV(estimator=algo,cv=cv)\n",
+    "  rfe=RFECV(estimator=algo,cv=cv,min_features_to_select=20)\n",
     "  rfe.fit(X,y)\n",
     "  rfe_sel_index=rfe.get_support(indices=True)\n",
     "  return rfe_sel_index"
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(boruta_sel_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +381,7 @@
        "0.6346153846153846"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +454,7 @@
        "0.6153846153846154"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,16 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(34,)"
+       "array([ 2,  3,  4,  6,  8,  9, 10, 11, 13, 14, 17, 20, 22, 23, 25, 26, 27,\n",
+       "       28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 39, 41, 42, 43, 45, 47, 49],\n",
+       "      dtype=int64)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,8 +516,63 @@
     "knn=KNeighborsClassifier(n_neighbors=7)\n",
     "svc=SVC(kernel='linear',C=0.7)\n",
     "rfecv_feat_idx=rfe_feature_selection(svc,boruta_train_x_scaled,train_y,20) # Getting features using RFECV \n",
-    "rfecv_feat_idx.shape"
+    "rfecv_feat_idx"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['T1_ED_Intensity_MedianAbsoluteDeviation',\n",
+       "       'T1_ED_Histogram_Bins-16_Bins-16_Bin-3_Frequency',\n",
+       "       'T1_ED_GLSZM_Bins-16_Radius-1_GreyLevelNonUniformity',\n",
+       "       'T1_ET_Intensity_Energy', 'T1_ET_Intensity_Mean',\n",
+       "       'T1_ET_Intensity_Minimum', 'T1_ET_Intensity_Range',\n",
+       "       'T1_NC_Intensity_Minimum', 'T2_ED_Intensity_Mean',\n",
+       "       'T2_ED_Intensity_Range', 'T2_NC_Intensity_Mean',\n",
+       "       'T2_NC_GLSZM_Bins-16_Radius-1_GreyLevelVariance',\n",
+       "       'FLAIR_ED_Intensity_Maximum', 'FLAIR_ED_Intensity_Range',\n",
+       "       'FLAIR_ED_Histogram_Bins-16_Bins-16_Bin-10_Frequency',\n",
+       "       'FLAIR_ED_Histogram_Bins-16_Bins-16_Bin-9_Frequency',\n",
+       "       'FLAIR_ED_GLSZM_Bins-16_Radius-1_ZoneSizeMean',\n",
+       "       'FLAIR_ET_Intensity_InterQuartileRange',\n",
+       "       'FLAIR_ET_Histogram_Bins-16_Bins-16_Mean',\n",
+       "       'FLAIR_NC_Intensity_InterQuartileRange', 'FLAIR_NC_Intensity_Minimum',\n",
+       "       'FLAIR_NC_Histogram_Bins-16_Bins-16_Mean',\n",
+       "       'FLAIR_NC_GLSZM_Bins-16_Radius-1_GreyLevelVariance',\n",
+       "       'T1GD_ED_Intensity_Minimum',\n",
+       "       'T1GD_ED_Histogram_Bins-16_Bins-16_Bin-6_Frequency',\n",
+       "       'T1GD_ED_Histogram_Bins-16_Bins-16_Bin-7_Frequency',\n",
+       "       'T1GD_ED_GLCM_Bins-16_Radius-1_Entropy', 'T1GD_ED_NGTDM_Complexity',\n",
+       "       'T1GD_ET_GLSZM_Bins-16_Radius-1_GreyLevelNonUniformity',\n",
+       "       'T1GD_ET_GLSZM_Bins-16_Radius-1_GreyLevelVariance',\n",
+       "       'T1GD_NC_Intensity_Maximum',\n",
+       "       'T1GD_NC_Histogram_Bins-16_Bins-16_Bin-0_Frequency',\n",
+       "       'T1GD_NC_Histogram_Bins-16_Bins-16_Mean',\n",
+       "       'T1GD_NC_GLSZM_Bins-16_Radius-1_GreyLevelVariance'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_features_col=boruta_train_x.columns[rfecv_feat_idx]\n",
+    "final_features_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -515,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +644,7 @@
        " [0.5384615384615384, 0.6153846153846154]]"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -603,6 +680,13 @@
     "std_accuracy=np.std(metrics,axis=0)\n",
     "print(\"Accuracy : \"+str(avg_accuracy[1])+\" +/- \"+str(std_accuracy[1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
